<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello, Ken!</string>
    <string name="app_name">Yamba</string>
    <string name="activity_status_title">Status Update</string>
    <string name="button_update_text">Update Status</string>
    <string name="post_status_success">Successfully posted status update</string>
    <string name="post_status_fail">Failed to post status message</string>
    <string name="username">Username</string>
    <string name="username_summary">Who do you log in as?</string>
    <string name="password">Password</string>
    <string name="server">Server</string>
    <string name="preferences">Preferences</string>
    <string name="prefs">Prefs</string>
    <string name="password_summary">What\'s your password?</string>
    <string name="server_summary">URL where Server API is at</string>
    <string name="status_update">Status Update</string>
    <string name="refresh">Refresh</string>
    <string name="timeline">Timeline</string>
    <string name="status">Status</string>
    <string name="purge">Purge</string>
    <string name="interval">Interval</string>
    <string name="interval_summary">How often to refresh data?</string>
    <string name="should_vibrate">Should vibrate?</string>
    <string name="vibrate_summary">Should it vibrate for new statuses?</string>
    <string name="about">About</string>
</resources>
